src/test/pass/compound_op_with_global.ly
integer a = 10

function f() {
	a += 10
}

f()
