src/test/fail/if_with_nil_return.ly
<@lily function f():nil {} if f():f() @>
